# legallystudying

./: .env.docker  .gitignore  README.md  docker-compose.yml  setup.sh  start-docker.sh  summary.yml
backend/: .dockerignore  Dockerfile  docker-entrypoint.sh  init_db.sql  pyproject.toml  requirements.txt  test_ocr.py  test_ocr_real.py
backend/app/: config.py  main.py
backend/app/api/: courses.py  degrees.py  documents.py  extension.py  health.py  ocr.py  plugins.py  prompts.py  queries.py  tts.py
backend/app/dto/: course_dto.py  degree_dto.py  document_dto.py  prompt_dto.py  query_dto.py
backend/app/services/: chunking_service.py  embedding_service.py  llm_service.py  ocr_pipeline.py  ocr_service.py  parser_service.py  prompt_seeder.py  startup_service.py  text_analyzer.py  tts_service.py
backend/domain/entities/: course.py  degree.py  document.py  prompt.py
backend/domain/repositories/: course_repository.py  degree_repository.py  document_repository.py  prompt_repository.py
backend/domain/use_cases/: answer_question.py  process_document.py  query_documents.py  summarize_document.py
backend/infrastructure/database/: chroma_repository.py  course_repository_impl.py  degree_repository_impl.py  document_repository_impl.py  prompt_repository_impl.py
backend/plugins/: docx_textract_plugin.py  epub_parser.py  image_ocr_plugin.py  mobi_parser.py  pdf_pymupdf_plugin.py
backend/scripts/: init_database.sh
backend/services/: __init__.py  ocr_pipeline.py
backend/tests/: test_api.py  test_plugins.py  test_repositories.py  test_services.py  test_use_cases.py
(+44 files in other folders)
